--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "extend": "^3.0.2",
+    "lodash": "^4.17.11",
     "merge": "^1.2.1",
-    "mongoose": "^5.0.12"
+    "mongoose": "^5.0.12",
+    "mpath": "^0.6.0",
+    "react-dev-utils": "^9.0.1",
+    "react-dom": "^16.8.6",
+    "webpack-dev-server": "^3.4.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.1"
